--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.9.5"
   }
 }
