--- a/package.json
+++ b/package.json
@@ -22,5 +22,17 @@
     "nodemon": "^3.0.1",
     "react-scripts": "^5.0.0",
     "typescript": "^4.9.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
